fix horizontal scroll 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1930,7 +1930,8 @@ body {
   padding: 70px 0 110px;
   margin-bottom: -40px;
   border-radius: 40px 40px 0 0;
-  background: #FFFFFF; }
+  background: #FFFFFF;
+  overflow: hidden; }
   @media (max-width: 1024px) {
     .reviews {
       padding: 40px 0 80px; } }
